--- a/views/register.ejs
+++ b/views/register.ejs
@@ -130,7 +130,7 @@
   </div>
 
   <!-- Bagian Kanan: Background -->
-  <div style="width:50%; background-image:url('../img/login.jpeg'); background-size:cover; background-position:center;"></div>
+  <div style="width:50%; background-image:url('/public/img/login.jpeg'); background-size:cover; background-position:center;"></div>
 
   <!-- Script toggle password -->
   <script>
