update homepage pict

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -47,7 +47,7 @@
     </p>
   </div>
   <div class="hero-image">
-    <img src="/public/img/hero-img.png" alt="Hacker typing" style="display:block;width:500px;height:auto;border-radius:20px;">
+    <img src="../img/hero-img.png" alt="Hacker typing" style="display:block;width:500px;height:auto;border-radius:20px;">
   </div>
 </section>
 
@@ -61,7 +61,7 @@
         Apa itu<br>Vulnera?</h1>
       </div>
       <div class="about-image">
-        <img src="/public/img/about.png" alt="Ilustrasi keamanan siber" style="max-width:400px;height:auto;border-radius:20px;">
+        <img src="../img/about.png" alt="Ilustrasi keamanan siber" style="max-width:400px;height:auto;border-radius:20px;">
       </div>
     </div>
 
