--- a/views/admin/uploadcsv.ejs
+++ b/views/admin/uploadcsv.ejs
@@ -8,7 +8,7 @@
 <body style="margin:0; font-family:Arial, sans-serif; background:#0F1035; color:#F8FAFC;">
 
   <!-- Sidebar -->
-  <% layout('layouts/main') %>
+  <%- include('partials/sidebar') %>
 
   <!-- Upload Section -->
   <section style="display:flex; justify-content:center; align-items:center; height:60vh;flex-direction:column;text-align:center;">
