--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -9,7 +9,7 @@
 <body class="text-white flex" style="background-color:#0F1035;">
 
 <!-- Sidebar -->
- <%- include('partials/sidebar') %>
+ <%- include('admin/sidebar') %>
 
   <!-- Main Content -->
   <main class="flex-1 p-6 space-y-6">
