--- a/views/admin/uploadcsv.ejs
+++ b/views/admin/uploadcsv.ejs
@@ -10,7 +10,7 @@
   <!-- Sidebar -->
   <aside class="w-64 p-5" style="background-color: #263159;">
     <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 20px;">
-      <img src="/public/img/logo.png" alt="Logo" style="width: 35px; height: 43px;">
+      <img src="../img/logo.png" alt="Logo" style="width: 35px; height: 43px;">
       <h1 class="text-3xl font-bold" style="background:linear-gradient(45deg,#FFD66B,#FFFBEB);-webkit-background-clip:text;background-clip:text;color:transparent;-webkit-text-fill-color:transparent; margin: 0;">Vulnera</h1>
     </div>
 
