--- a/views/admin/uploadcsv.ejs
+++ b/views/admin/uploadcsv.ejs
@@ -15,9 +15,9 @@
     </div>
 
     <ul class="space-y-4">
-      <li><a href="#" class="block hover:text-blue-400">📊 Dashboard</a></li>
-      <li><a href="#" class="block hover:text-blue-400">📝 Upload File</a></li>
-      <li><a href="#" class="block text-red-400">Keluar</a></li>
+      <li><a href="admin/home" class="block hover:text-blue-400">📊 Dashboard</a></li>
+      <li><a href="/uploadcsv" class="block hover:text-blue-400">📝 Upload File</a></li>
+      <li><a href="/logout" class="block text-red-400">Keluar</a></li>
     </ul>
   </aside>
 
